--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@popperjs/core": "^2.10.1",
+    "alertifyjs": "^1.13.1",
     "bootstrap": "^5.1.1",
     "bootswatch": "^5.1.1",
     "jquery": "^3.6.0",
