--- a/angular.json
+++ b/angular.json
@@ -52,6 +52,7 @@
                 }
               ],
               "optimization": true,
+              "aot": true,
               "outputHashing": "all",
               "sourceMap": false,
               "namedChunks": false,
